# datannurpy

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LLM_ENV_PROPOSAL.md  Makefile  README.md  codecov.yml  docker-compose.test.yml  pyproject.toml  test_jsonjsdb_compat.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  debug-oracle.yml  release.yml  test-databases.yml
data/: company.db  employees.csv  photovoltaik.gpkg  test.parquet  test_with_metadata.parquet
data/csv/: legacy_encoding.csv  regions_france.csv
data/iceberg_warehouse/default/test_table/data/: 00000-0-1e1da62f-7ab4-4b3f-bcbd-b24432db951e.parquet
data/iceberg_warehouse/default/test_table/metadata/: 00000-e3144c7a-e930-4872-a3ae-7ed70d1de3f9.metadata.json  00001-24d3801b-ed6c-4a9c-9d07-1142e5c088c1.metadata.json  1e1da62f-7ab4-4b3f-bcbd-b24432db951e-m0.avro  snap-1967915468403791966-0-1e1da62f-7ab4-4b3f-bcbd-b24432db951e.avro
data/metadata/: institution.csv  tag.csv  variable.csv
data/subfolder1/: employees.xlsx  employees_old.xls
data/test_delta/: part-00000-c2cff327-7bbb-4534-b048-bd302e9f4e97-c000.snappy.parquet  part-00000-c3c2d6c8-93bb-46d6-a81d-e2d86791ba41-c000.snappy.parquet
data/test_partitioned/year=2023/region=EU/: 094ee66843724068ae5cdc7db9da6d57-0.parquet
data/test_partitioned/year=2023/region=US/: 094ee66843724068ae5cdc7db9da6d57-0.parquet
data/test_partitioned/year=2024/region=EU/: 094ee66843724068ae5cdc7db9da6d57-0.parquet
data/test_partitioned/year=2024/region=US/: 094ee66843724068ae5cdc7db9da6d57-0.parquet
data/timeseries/mixed/: budget_2022.csv  budget_2023.csv  census_2023.csv  census_2024.csv
data/timeseries/monthly_folders/2023/12/: export.csv
data/timeseries/monthly_folders/2024/01/: export.csv
data/timeseries/monthly_folders/2024/02/: export.csv
data/timeseries/quarterly/: rapport_2023Q1.csv  rapport_2023Q2.csv  rapport_2024Q1.csv
data/timeseries/schema_evolution/: data_2020.csv  data_2021.csv  data_2023.csv
data/timeseries/yearly/: enquete_2020.csv  enquete_2021.csv  enquete_2023.csv
docs/: .gitignore  index.md  metadata.md  migration-jsonjsdb.md  output.md  package-lock.json  package.json  python-api.md  remote-storage-plan.md  remote-storage.md  scan-depth.md  scanning-databases.md  scanning-files.md  specs-entity-collections.md  specs-incremental-scan.md  specs-scan-refactoring.md  time-series.md
docs/.vitepress/: config.ts
docs/de/: index.md  metadata.md  output.md  python-api.md  scan-depth.md  scanning-databases.md  scanning-files.md  time-series.md
docs/deploy/: deploy.config.template.json  deploy.ts
docs/dev/: metadata-first-pattern.md
docs/fr/: index.md  metadata.md  output.md  python-api.md  scan-depth.md  scanning-databases.md  scanning-files.md  time-series.md
docs/it/: index.md  metadata.md  output.md  python-api.md  scan-depth.md  scanning-databases.md  scanning-files.md  time-series.md
docs/public/: .htaccess
examples/: demo.py  demo.yml  demo_db.yml  demo_editorial.yml  demo_remote.py  demo_remote.yml
examples/datannur_app_overlay/: dataset.json  variable.csv
scripts/: download_app.py
src/datannurpy/: __init__.py  __main__.py  _add_database.py  _add_dataset.py  _add_folder.py  _ids.py  _modality.py  add_database.py  add_dataset.py  add_folder.py  add_geodatabase.py  add_metadata.py  catalog.py  compression.py  dataset_scan.py  entity_metadata.py  errors.py  exporter.py  finalize.py  preview.py  scan_cache.py  schema.py
src/datannurpy/config/: __init__.py  config.py
src/datannurpy/entities/: __init__.py  base.py  dataset.py  doc.py  folder.py  institution.py  modality.py  tag.py  variable.py
src/datannurpy/exporter/: __init__.py  app.py  db.py
src/datannurpy/importer/: __init__.py  db.py
src/datannurpy/readers/: __init__.py  _utils.py  csv.py  database.py  excel.py  sas.py  statistical.py
src/datannurpy/readers/parquet/: __init__.py  _discovery.py  _scanner.py
src/datannurpy/scanner/: __init__.py  _oracle.py  archive.py  autotag.py  csv.py  database.py  db_introspect.py  discovery.py  excel.py  filesystem.py  format_detect.py  geo.py  geo_raster.py  geo_vector.py  geopackage.py  pattern.py  scan.py  statistical.py  timeseries.py  utils.py
src/datannurpy/scanner/parquet/: _discovery.py  _scanner.py  core.py  discovery.py
src/datannurpy/utils/: __init__.py  db_enrich.py  enumeration.py  folder.py  ids.py  log.py  modality.py  params.py  prefix.py  schema_columns.py  time.py  version.py
src/datannurpy/writers/: __init__.py  app.py  json.py
tests/: conftest.py  test_add_dataset.py  test_add_folder.py  test_add_metadata.py  test_catalog.py  test_cli.py  test_compression.py  test_config.py  test_database.py  test_discovery.py  test_e2e_snapshot.py  test_enumeration.py  test_evolution_stability.py  test_export_app.py  test_exporter.py  test_failed_scan_retry.py  test_finalize.py  test_format_detect.py  test_ids.py  test_importer_db.py  test_incremental_database.py  test_incremental_files.py  test_log.py  test_metadata_first.py  test_modality.py  test_prefix.py  test_properties.py  test_remote_http.py  test_remote_memory.py  test_scan.py  test_scan_cache.py  test_scan_errors.py  test_timeseries.py  test_validate_params.py  test_write_json.py  test_zip_container.py
tests/database/: base.py  conftest.py  test_connection.py  test_database_utils.py  test_db_introspect.py  test_duckdb.py  test_geo.py  test_geopackage.py  test_mssql.py  test_mysql.py  test_oracle.py  test_postgres.py  test_sqlite.py
tests/fixtures/expected_db/: __table__.json  dataset.json  enumeration.json  folder.json  freq.json  frequency.json  institution.json  modality.json  organization.json  tag.json  value.json  variable.json
tests/scanner/: test_archive.py  test_autotag.py  test_csv.py  test_excel.py  test_filesystem.py  test_geo_raster.py  test_geo_vector.py  test_geodatabase.py  test_parquet.py  test_pattern.py  test_permission_skip.py  test_statistical.py  test_utils.py
