[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datannurpy"
version = "0.20.0a2"
description = "Python library for datannur catalog metadata management"
authors = [{ name = "datannur" }]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "ibis-framework[duckdb]>=11.0",
  "polars>=1.0",
  "jsonjsdb>=0.8.6",
  "openpyxl>=3.0",
  "xlrd>=2.0",
  "fsspec>=2024.0",
  "cryptography>=46.0.7",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "typing_extensions>=4.0;python_version<'3.11'",
]

[project.optional-dependencies]
postgres = ["ibis-framework[postgres]>=11.0"]
mysql = ["ibis-framework[mysql]>=11.0"]
oracle = ["ibis-framework[oracle]>=11.0"]
mssql = ["ibis-framework[mssql]>=11.0"]
databases = ["ibis-framework[postgres,mysql,oracle,mssql]>=11.0"]
ssh = ["paramiko>=4.0"]
delta = ["deltalake>=0.18.0"]
iceberg = [
  "pyiceberg>=0.10.0; python_version >= '3.10'",
  "requests>=2.33.0; python_version >= '3.10'",
]
stat = [
  "pyreadstat>=1.2.0,<=1.2.8; python_version < '3.10'",
  "pyreadstat>=1.2.0; python_version >= '3.10'",
]
s3 = ["s3fs>=2024.0; python_version >= '3.10'"]
azure = ["adlfs>=2024.0; python_version >= '3.10'"]
gcs = ["gcsfs>=2024.0; python_version >= '3.10'"]
cloud = [
  "s3fs>=2024.0; python_version >= '3.10'",
  "adlfs>=2024.0; python_version >= '3.10'",
  "gcsfs>=2024.0; python_version >= '3.10'",
]

[project.urls]
Homepage = "https://github.com/datannur/datannurpy"
Repository = "https://github.com/datannur/datannurpy"
Documentation = "https://github.com/datannur/datannurpy#readme"
Issues = "https://github.com/datannur/datannurpy/issues"

[dependency-groups]
dev = [
  "pytest>=7.0",
  "pytest-xdist>=3.0",
  "pytest-cov>=4.0",
  "ruff>=0.4.0",
  "pyright>=1.1.400",
  "deltalake>=0.18.0",
  "oracledb>=2.0.0",
  "paramiko>=4.0",
  "pyiceberg>=0.10.0",
  "pyreadstat>=1.2.0,<=1.2.8; python_version < '3.10'",
  "pyreadstat>=1.2.0; python_version >= '3.10'",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-n auto --maxprocesses 4"
filterwarnings = [
  "ignore::DeprecationWarning:pyiceberg.*",
  "ignore::DeprecationWarning:pydantic.*",
]

[tool.ruff]
target-version = "py39"
exclude = ["examples/output"]

[tool.hatch.build.targets.wheel]
packages = ["src/datannurpy"]

[tool.hatch.build.targets.sdist]
include = ["src/datannurpy"]

[tool.hatch.build]
# Include app/ even though it's gitignored
ignore-vcs = true

[tool.uv]
constraint-dependencies = [
  "cffi>=1.17.0",
  "duckdb>=1.0",
  "et-xmlfile>=2.0",
  "google-cloud-storage>=2.0",
  "iniconfig>=2.0",
  "pycparser>=2.20",
  "setuptools>=75.0",
]

[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "standard"
exclude = [
  "src/datannurpy/app",
  "**/node_modules",
  "**/__pycache__",
  "**/.*",
  ".venv",
]

[tool.coverage.run]
source = ["src/datannurpy"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
