[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datannurpy"
version = "0.33.1"
description = "Scan files and databases into ready-to-use datannur catalogs"
authors = [{ name = "datannur" }]
readme = "README.md"
requires-python = ">=3.9,!=3.9.0,!=3.9.1"
license = { text = "MIT" }
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "ibis-framework[duckdb]>=11.0",
  "polars>=1.0",
  "jsonjsdb>=0.9.4",
  "openpyxl>=3.0",
  "xlrd>=2.0",
  "odfpy>=1.4",
  "fsspec>=2024.0",
  # HTTP(S) URL scanning only. Gated to 3.10+: aiohttp's security fixes land in
  # 3.14+, which dropped Python 3.9 — so 3.9 gets no CVE-free aiohttp at all.
  # On 3.9 the dependency is absent and HTTP-URL scanning raises a clear error;
  # every other feature keeps working. See _ensure_http_support in filesystem.py.
  "aiohttp>=3.14.1; python_version >= '3.10'",
  "rdflib>=7.0",
  "pyshacl>=0.30",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "typing_extensions>=4.0;python_version<'3.11'",
]

[project.optional-dependencies]
postgres = ["ibis-framework[postgres]>=11.0"]
mysql = ["ibis-framework[mysql]>=11.0"]
oracle = ["ibis-framework[oracle]>=11.0"]
mssql = ["ibis-framework[mssql]>=11.0"]
databases = ["ibis-framework[postgres,mysql,oracle,mssql]>=11.0"]
ssh = ["paramiko>=5.0"]
delta = ["deltalake>=0.18.0"]
iceberg = [
  "pyiceberg>=0.10.0; python_version >= '3.10'",
  "requests>=2.33.0; python_version >= '3.10'",
]
stat = [
  "pyreadstat>=1.2.0,<=1.2.8; python_version < '3.10'",
  "pyreadstat>=1.2.0; python_version >= '3.10'",
]
geo = [
  "pyproj>=3.4",
  "pyogrio>=0.10",
  "rasterio>=1.4",
  "pygeometa>=0.15",
  "pystac>=1.10",
]
s3 = ["s3fs>=2024.0; python_version >= '3.10'"]
azure = ["adlfs>=2024.0; python_version >= '3.10'"]
gcs = ["gcsfs>=2024.0; python_version >= '3.10'"]
cloud = [
  "s3fs>=2024.0; python_version >= '3.10'",
  "adlfs>=2024.0; python_version >= '3.10'",
  "gcsfs>=2024.0; python_version >= '3.10'",
]

[project.urls]
Homepage = "https://github.com/datannur/datannurpy"
Repository = "https://github.com/datannur/datannurpy"
Documentation = "https://github.com/datannur/datannurpy#readme"
Issues = "https://github.com/datannur/datannurpy/issues"

[dependency-groups]
dev = [
  "pytest>=7.0",
  "pytest-xdist>=3.0",
  "pytest-cov>=4.0",
  "ruff>=0.4.0",
  "pyright>=1.1.400",
  "deltalake>=0.18.0",
  "oracledb>=2.0.0",
  "paramiko>=5.0",
  "pyiceberg>=0.10.0",
  "pyproj>=3.4",
  "pyogrio>=0.10",
  "rasterio>=1.4",
  "pygeometa>=0.15",
  "pystac>=1.10",
  "pyreadstat>=1.2.0,<=1.2.8; python_version < '3.10'",
  "pyreadstat>=1.2.0; python_version >= '3.10'",
  "urllib3>=2.7.0; python_version >= '3.10'",
  "idna>=3.15",
  "hypothesis>=6.100",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-n auto --maxprocesses 4"
filterwarnings = [
  "ignore::DeprecationWarning:pyiceberg.*",
  "ignore::DeprecationWarning:pydantic.*",
]

[tool.ruff]
target-version = "py39"
exclude = ["examples/output"]

[tool.ruff.lint]
extend-select = ["B", "C4", "C90", "PERF", "RET", "SIM"]
# PERF203: try/except inside scan loops is the error-degradation strategy, not an accident
# B009: getattr with a literal is used deliberately for dynamic backend attributes
# (ibis BaseBackend.raw_sql/sql/con, pyarrow re-exports) that the type stubs don't carry
ignore = ["PERF203", "B009"]

[tool.ruff.lint.mccabe]
# Every function passes without noqa; lower the ceiling as the worst ones get simplified
max-complexity = 20

[tool.hatch.build.targets.wheel]
packages = ["src/datannurpy"]

[tool.hatch.build.targets.sdist]
include = ["src/datannurpy"]

[tool.hatch.build]
# Include app/ even though it's gitignored
ignore-vcs = true

[tool.uv]
exclude-newer = "3 days"
constraint-dependencies = [
  "cffi>=1.17.0",
  "click>=8.0",
  "cryptography>=48.0.1",
  "duckdb>=1.0",
  "et-xmlfile>=2.0",
  "google-cloud-storage>=2.0",
  "iniconfig>=2.0",
  # pygeometa leaves jinja2/jsonschema/lxml/owslib/pyyaml unbounded; the
  # absolute-oldest releases are Python-2-era and fail to build under --resolution lowest
  "jinja2>=3.0",
  "jsonschema>=4.0",
  "lxml>=4.9",
  "owslib>=0.28",
  "pyarrow>=23.0.1; python_version >= '3.10'",
  "pycparser>=2.20",
  "pyyaml>=6.0",
  "setuptools>=75.0",
]

[tool.uv.exclude-newer-package]
jsonjsdb = "2026-07-15T23:59:59Z"

[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "standard"
exclude = [
  "src/datannurpy/app",
  "**/node_modules",
  "**/__pycache__",
  "**/.*",
  ".venv",
]

[tool.coverage.run]
source = ["src/datannurpy"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
